# heym

./: .env.example  .gitignore  AGENTS.md  COMMONS-CLAUSE.md  ENVIRONMENT-VARIABLES.md  LICENSE  README.md  SECURITY.md  check.sh  deploy.sh  docker-compose.yml  run.sh  run_e2e.sh  set-version.sh
backend/: Dockerfile  pyproject.toml
backend/alembic/versions/: 063_add_mcp_servers.py  066_add_workflow_versions_desc_index.py  067_chat_stream_events.py  070_dashboard_message_tool_calls.py  071_add_provider_to_llm_pricing_override.py  074_active_workflow_executions.py  075_add_discord_credential_type.py  077_add_github_credential_type.py  (+24 more)
backend/app/: config.py  main.py
backend/tests/: test_active_executions_api.py  test_agent_mcp_tool_timeout.py  test_agent_node_tools.py  test_alembic_migrations.py  test_amazon_s3_node.py  test_auth_cookie_security.py  test_build_assistant_prompt_node_templates.py  test_build_context_concurrency.py  test_chart_output_node.py  test_chart_payload.py  test_chat_background_task.py  test_chat_cancel.py  test_clarify_protocol_prompt.py  test_clickhouse_service.py  test_codex_docker_wrapper.py  test_codex_node.py  test_codex_oauth.py  test_codex_publish_modes.py  test_codex_runner_auth.py  test_credential_amazon_s3.py  test_credential_clickhouse.py  test_credential_discord.py  test_credential_github.py  test_credential_linear.py  test_credential_notion.py  test_credential_supabase.py  test_credentials_models.py  test_dashboard_chat_api.py  test_dashboard_chats.py  test_dashboard_data_cache.py  test_dashboards_api.py  test_data_table_clone_api.py  test_data_table_schema_generation.py  test_discord_node.py  test_discord_trigger.py  test_drain_bg_futures.py  test_drive_node.py  test_error_workflow_runner.py  test_execution_cancellation.py  test_execution_log_assistant_prompt.py  (+75 more)
(+486 files in other folders)
