[project]
name = "heym-backend"
version = "0.0.39"
description = "AI Workflow Automation Platform Backend"
license = { text = "MIT with Commons Clause condition" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.29.0",
    "pydantic[email]>=2.13.3",
    "pydantic-settings>=2.14.0",
    "bcrypt>=4.0.0",
    "alembic>=1.18.4",
    "mako>=1.3.11",
    "python-multipart>=0.0.27",
    "httpx>=0.26.0",
    "simpleeval>=1.0.7",
    "croniter>=6.2.2",
    "cryptography>=47.0.0",
    "openai>=2.33.0",
    "psycopg2-binary>=2.9.12",
    "qdrant-client>=1.17.1",
    "redis>=7.4.0",
    "pypdf>=6.10.2",
    "reportlab>=4.0.0",
    "python-docx>=1.0.0",
    "pypandoc_binary>=1.13",
    "Pillow>=11.0",
    "aio-pika>=9.6.2",
    "beautifulsoup4>=4.12.0",
    "tiktoken>=0.5.0",
    "docker>=7.0.0",
    "mcp>=1.27.0",
    "playwright>=1.40.0",
    "jsonschema>=4.20.0",
    "websockets>=16.0",
    "pyjwt[crypto]>=2.12.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince20",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]
